# urlsafe

./: .gitignore  Cargo.toml  LICENSE  README.md  urlsafe.ascii
src/: decode.rs  encode.rs  main.rs
